objects/Contact.object
<CustomObject><fields>
        <fullName>Action_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Step</label>
        <referenceTo>Improvement_Action_Step__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CDE_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDE Feedback</label>
        <referenceTo>CDE_Feedback__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CDE_Role_Info__c</fullName>
        <description>Used for SSO JIT Provisioning</description>
        <label>CDE Role Info</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>READ_Lead__c</fullName>
        <description>District Lead contact for the READ Act</description>
        <inlineHelpText>District Lead contact for the READ Act</inlineHelpText>
        <label>READ Lead</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews><listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews></CustomObject>